src/test/ui/keyword/keyword-self-as-identifier.stderr
error[E0531]: cannot find unit struct/variant or constant `Self` in this scope
  --> $DIR/keyword-self-as-identifier.rs:12:9
   |
LL |     let Self = 22; //~ ERROR cannot find unit struct/variant or constant `Self` in this scope
   |         ^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0531`.
